--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -14,6 +14,8 @@
 <div class="container my-5">
     <h1 class="mb-4">Thank you for submitting the form!</h1>
     <a href="/">Start new entry</a>
+    <br>
+    <a href="/results">View results table</a>
 </div>
 </body>
 </html>
