added a link to go back to the main page in the results page

--- a/templates/results.html
+++ b/templates/results.html
@@ -38,6 +38,9 @@
 <body class="bg-light">
 <div class="container my-5">
     <h1>Results</h1>
+    <a href="/">Back to survey</a>
+    <br>
+    <br>
     <button onclick="wipeData()" class="btn btn-danger mb-2">Wipe Data</button>
     <table id="entriesTable" class="table table-striped">
         <thead>
